--- a/package.json
+++ b/package.json
@@ -26,11 +26,7 @@
   "scripts": {
     "start": "react-scripts start",
     "predeploy": "npm run build",
-    "build": "cross-env PUBLIC_URL=/personal-website react-scripts build",
-    "rm": "rm -rf docs",
-    "mv": "mv build docs",
-    "git": "git add . && git commit && git push origin master",
-    "deploy": "npm run rm && npm run build && npm run mv && npm run git"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
