--- a/package.json
+++ b/package.json
@@ -53,5 +53,5 @@
     "cross-env": "^7.0.3",
     "gh-pages": "^5.0.0"
   },
-  "homepage": " https://dagechan.github.io/homePage/"
+  "homepage": " https://dagechan.github.io"
 }
