--- a/package.json
+++ b/package.json
@@ -54,5 +54,5 @@
     "cross-env": "^7.0.3",
     "gh-pages": "^5.0.0"
   },
-  "homepage": " https://dagechan.github.io"
+  "homepage": " https://dagechan.github.io/dagechan.github.io"
 }
